--- a/BlazorApp2/Client/Shared/NavMenu.razor
+++ b/BlazorApp2/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Ruckr</a>
+    <a class="navbar-brand" href="">Ruckr Alpha 1</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,6 +30,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="messagesinbox">
                 <span class="oi oi-chat" aria-hidden="true"></span> Messages
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="dev">
+                <span class="oi oi-project" aria-hidden="true"></span> Messages
             </NavLink>
         </li>
     </ul>
