--- a/BlazorApp2/Client/Shared/NavMenu.razor
+++ b/BlazorApp2/Client/Shared/NavMenu.razor
@@ -34,7 +34,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="dev">
-                <span class="oi oi-project" aria-hidden="true"></span> Messages
+                <span class="oi oi-project" aria-hidden="true"></span> DevOptions
             </NavLink>
         </li>
     </ul>
