--- a/BlazorApp2/Client/Pages/TeamProfile.razor
+++ b/BlazorApp2/Client/Pages/TeamProfile.razor
@@ -2,25 +2,31 @@
 @using BlazorApp2.Shared
 @inject LocationService  LocationService
 @inject HttpClient Http
-@page "/teamprofile/{id:guid}"
+@page "/teamprofile/{Id:guid}"
 <h3>Team Profile</h3>
 <div class="jumbotron">
     <img src="@DefaultIfNone(tm.TeamImageURI)">
     <h1 class="display-4">@tm.TeamName</h1>
+  
     <p class="lead">@tm.City.City, @tm.City.Admin_name </p>
+    <h4>Team Owner:</h4>
+    <p><a href="/profile/@tm.TeamOwner">@myProfile.Name</a></p>
     <hr class="my-4">
     <p>@tm.TeamBio</p>
 </div>
 @code {
     [Parameter]
-    public Guid Id { get; set; }
+    public Guid Id { get; set; } = Guid.Empty;
     TeamModel tm = new TeamModel();
+    public ProfileInfo myProfile { get; set; } = new ProfileInfo();
 
     protected override async Task OnInitializedAsync()
     {
         //tm = await Http.GetFromJsonAsync<TeamModel>($"teams/profile/{Id}");
         //var test = await Http.GetAsync($"teamprofile/{Id}");
         tm = await Http.GetFromJsonAsync<TeamModel>($"TeamProfile/{Id}");
+        myProfile = await Http.GetFromJsonAsync<ProfileInfo>($"Profile/{tm.TeamOwner}");
+
 
     }
     protected string DefaultIfNone(string img)
