--- a/BlazorApp2/Client/Pages/Teams.razor
+++ b/BlazorApp2/Client/Pages/Teams.razor
@@ -21,8 +21,8 @@
 }
 @functions
  {
-    IEnumerable<TeamModel>
-    teams = new TeamModel[0];
+    public IEnumerable<TeamModel> teams { get; set; } = new TeamModel[0];
+
     string guidstring = string.Empty;
     protected override async Task OnInitializedAsync()
     {
