Add player count to team profile

--- a/BlazorApp2/Client/Pages/TeamProfile.razor
+++ b/BlazorApp2/Client/Pages/TeamProfile.razor
@@ -11,6 +11,8 @@
     <p class="lead">@tm.City.City, @tm.City.Admin_name </p>
     <h4>Team Owner:</h4>
     <p><a href="/profile/@tm.TeamOwner">@myProfile.Name</a></p>
+    <h5>Player Count:</h5>
+    <p>@tm.Playercount</p>
     <hr class="my-4">
     <p>@tm.TeamBio</p>
 </div>
